Fix webgl freeze after OffscreenCanvas resize

This CL discards the pre-existing CanvasResourceProvider instance
if it is not of the right size when pushing a WebGL animation
frame.

BUG=866855

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ibfa8924102dfcd2815a6010b0b9ada6c37fdd5ab
Reviewed-on: https://chromium-review.googlesource.com/1148685
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578320}
Former-commit-id: d2e0f2c6027de3c9db038ff74af054b0171ce2df